--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
             outline: none;
         }
 
+        h4 {
+            color: rgb(155, 155, 155);
+            font-weight: initial;
+        }
+
     </style>
 </head>
 <body>
