--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             font-size: 20px;
             height: 45px;
             outline: none;
+            cursor:pointer;
         }
 
         h4 {
