--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         input {
             height: 45px;
             width: 400px;
-            border: 1px solid rgb(144, 172, 255);
+            border: 1px solid lightgray;
             border-radius: 5px;
             color: gray;
             outline: none;
