--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <body>
     
         <center>
-            <h1>QR CODE creator</h1>
+            <h1>QR CODE</h1>
         <input type="text" id="qr-data" placeholder="Enter link" /><br>
         
         <div id="qrcode"></div>
