--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         }
         button {
             width: 422px;
-            border: none;
+            border: 1px solid royalblue;
             background-color: royalblue;
             color: white;
             border-radius: 5px;
@@ -51,6 +51,13 @@
             height: 50px;
             outline: none;
             cursor:pointer;
+            transition: 0.3s;
+        }
+
+        button:hover {
+            background-color: white;
+            color: royalblue;
+            border: 1px solid royalblue;
         }
 
         h4 {
