--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>QR CODE</title>
     <style>
         body {
-            padding: 10px;
+            padding: 10px 0;
             font-family: sans-serif;
             opacity: 1;
             background-color: #ffffff;
@@ -31,10 +31,9 @@
         }
 
         #qrcode {
-            padding: 35px;
-            margin: 30px;
             border: 2px solid white;
             border-radius: 5px;
+            margin: 55px 0;
         }
 
         h1 {
